Fixed some width and spacing for the input form in newsletter section.

--- a/css/index.css
+++ b/css/index.css
@@ -592,10 +592,10 @@ label {
   .newsletter__explanation {
     margin-inline-start: -150px; }
   .newsletter__form {
-    height: 32px;
+    width: 60%;
     margin-inline-start: -148px;
     margin-block-start: 20px;
-    padding-inline-end: 178px; }
+    height: 32px; }
   .form_container {
     display: flex;
     justify-content: space-between;
